--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     }
     compile("org.springframework.boot:spring-boot-starter-jetty")
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
