--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     }
     compile("org.springframework.boot:spring-boot-starter-jetty")
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
