--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,10 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web") {
-       // exclude module: "spring-boot-starter-tomcat"
-    }
+    compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-jetty")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
